--- a/app/src/main/res/layout/dialog_add_payment.xml
+++ b/app/src/main/res/layout/dialog_add_payment.xml
@@ -32,6 +32,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/text_customer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
