--- a/app/src/main/res/layout/item_people_chat.xml
+++ b/app/src/main/res/layout/item_people_chat.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="@dimen/standard_card_radius"
     android:layout_margin="@dimen/stander_margin_x"
     >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -48,7 +48,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/spacing_middle"
                         android:layout_marginRight="@dimen/spacing_middle"
-                        android:text="People Name"
+                        android:text="مرتضی"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                         android:textColor="@color/grey_90" />
 
@@ -64,6 +64,12 @@
 
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textColor="@color/grey_40" />
+
+                    <TextView
+                        android:id="@+id/txt_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="۰۷۹۵۴۵۷۵۱۰" />
 
                 </LinearLayout>
 
