--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,7 +42,7 @@
     <color name="color_orange_dark">#F89406</color>
     <color name="white_color">#ffff</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#070707</color>
     <color name="white2">#FFFFFF</color>
 
 </resources>
